manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codec-server-creds
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codec-server-creds
  template:
    metadata:
      labels:
        app: codec-server-creds
    spec:
      containers:
      - image: pvsone/codec-server-creds:1.0.0
        name: codec-server-creds
        imagePullPolicy: Always
