manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codec-server-creds
  labels:
    app: codec-server-creds
spec:
  ports:
  - port: 3000
    name: http
  type: ClusterIP
  selector:
    app: codec-server-creds
